Fix position left when playground is visible

--- a/docs/app/components/layout/main/style.scss
+++ b/docs/app/components/layout/main/style.scss
@@ -63,6 +63,9 @@
     > .documentation {
       padding-right: $playground-width;
       padding-left: 0;
+      h1 {
+        left: 0;
+      }
     }
     > .navigation {
       transform: translateX(- 100%);
